# LLM-Scene-Graph-LTL-Planning

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Pipfile  README.md  setup.py
data/: 3DSceneGraph_Allensville.npz  3DSceneGraph_Benevolence.npz  3DSceneGraph_Collierville.npz
data/Allensville/: building.yaml  initial_positions.yaml  radius_config.bash
data/Allensville/missions/1/: GPT_LTL_formula.txt  NL_instructions.txt  ap_desc.npz  (+7 more)
data/Benevolence/: building.yaml  initial_positions.yaml  radius_config.bash
data/Collierville/: building.yaml  initial_positions.yaml  radius_config.bash
scripts/: extract_scene_graph_from_gibson.bash  generate_llm_heuristic.bash  install.bash  install_archlinux.bash  install_ubuntu.bash  nl2ltl.bash  run_amra_ltl_scene_graph.bash
src/cpp/: CMakeLists.txt
src/cpp/include/erl_common/: assert.hpp  binary_file.hpp  color_print.hpp  csv.hpp  eigen.hpp  exception.hpp  grid_map.hpp  grid_map_info.hpp  opencv.hpp  storage_order.hpp  string_utils.hpp  template_helper.hpp  tensor.hpp  test_helper.hpp  yaml.hpp
src/cpp/include/erl_env/: atomic_proposition.hpp  cost.hpp  environment_base.hpp  environment_ltl_scene_graph.hpp  environment_multi_resolution.hpp  environment_scene_graph.hpp  environment_state.hpp  finite_state_automaton.hpp  scene_graph.hpp  spot_helper.hpp
src/cpp/include/erl_geometry/: kdtree_eigen_adaptor.hpp
src/cpp/include/erl_search_planning/: amra_star.hpp  heuristic.hpp  llm_scene_graph_heuristic.hpp  ltl_3d_heuristic.hpp  planning_interface_multi_resolutions.hpp
src/cpp/src/apps/: amra_ltl_scene_graph.cpp
src/cpp/src/erl_common/: csv.cpp  eigen.cpp  opencv.cpp
src/cpp/src/erl_env/: environment_base.cpp  environment_ltl_scene_graph.cpp  environment_scene_graph.cpp  finite_state_automaton.cpp  spot_helper.cpp
src/cpp/src/erl_search_planning/: amra_star.cpp  llm_scene_graph_heuristic.cpp  ltl_3d_heuristic.cpp  planning_interface_multi_resolutions.cpp
src/cpp/test/: CMakeLists.txt  ap_desc.yaml  automaton.aut  gpt4_path_v2.yaml  test_amra_star_scene_graph.cpp
src/llm_planning/natural_to_temporal_logic/: prompt.py
src/python/llm_planning/: __init__.py
(+164 files in other folders)
